--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -1,10 +1,29 @@
-= form_for @game do |f|
-  - if @game.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@game.errors.count, "error")} prohibited this game from being saved:"
-      %ul
-        - @game.errors.full_messages.each do |message|
-          %li= message
+-# = form_for [@training, @game] do |f|
+-#   - if @game.errors.any?
+-#     #error_explanation
+-#       %h2= "#{pluralize(@game.errors.count, "error")} prohibited this game from being saved:"
+-#       %ul
+-#         - @game.errors.full_messages.each do |message|
+-#           %li= message
+-#
+-#   .actions
+-#     = f.submit 'Save'
 
-  .actions
-    = f.submit 'Save'
+
+= form_tag training_games_path, method: :put do
+  %table.table
+    %tr
+      %th
+        No(#{@games.count})
+
+    -# - @games.each do |game|
+    - 10.times do |n|
+      = fields_for "games[]", @games[n] do |f|
+        %tr
+          %td
+            = n+1
+          %td
+            -# = f.text_field :training_id
+
+
+  = submit_tag
